--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <h1 class="text bg-blue">Importance of trees</h1>
 
-    <h1 class="text bg-blue">Save the Water</h1>
+    <h1 class="text bg-blue">Save the plant</h1>
 
     <h2 class="text bg-blue">Importance of education</h2>
 
