--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <h2 class="text bg-blue">Importance of education</h2>
 
-    <p class="text bg-blue">Hello friends, I am Akshara</p>    
+    <p class="text bg-blue">Hello friends, I am Aarohi</p>    
 
 </body>
 </html>
