added about page

--- a/about.html
+++ b/about.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <h1 class="bg.aqua">Reasons to save plants</h1>
+    <h2 class="bg.orange">save the water</h2>
     
 </body>
 </html>
